# yast2-aduc

./: .gitignore  Dockerfile  RPMNAME  configure.ac
.github/workflows/: ci.yml
package/: yast-aduc.spec  yast2-aduc-1.3.tar.bz2  yast2-aduc.changes  yast2-aduc.spec
src/: Aduc.py  Makefile.am  aduc.desktop.in  aduc.py  complex.py  dialogs.py  org.opensuse.yast.ADUC.desktop.in  wizards.py  yui.py
src/clients/: aduc.py
src/desktop/: org.opensuse.yast.ADUC.desktop
src/include/aduc/: complex.py  dialogs.py
